--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Dwfmarket</title>
+  <title>MiinTiendita</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
   <script src="https://kit.fontawesome.com/d789be1080.js" crossorigin="anonymous"></script>
+
   <app-root></app-root>
 </body>
 </html>
